--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
 
     implementation 'com.google.firebase:firebase-messaging:20.1.3'
+
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
 }
