--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,5 +57,7 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-messaging:20.1.3'
 
+    implementation "com.redmadrobot:input-mask-android:4.3.1"
+
     implementation 'com.github.esafirm.android-image-picker:imagepicker:2.2.0'
 }
