--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,10 @@ android {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+    packagingOptions {
+        exclude 'META-INF/AL2.0'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 dependencies {
@@ -77,16 +81,16 @@ dependencies {
 
     // testing
     testImplementation 'junit:junit:4.13'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
-    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.7'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
+    androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation "android.arch.core:core-testing:1.1.1"
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
     testImplementation "org.mockito:mockito-core:3.3.3"
-    androidTestImplementation "org.mockito:mockito-android:2.21.0"
-    debugImplementation 'androidx.test:core:1.2.0'
+    androidTestImplementation "org.mockito:mockito-android:2.23.0"
+    debugImplementation 'androidx.test:core:1.3.0'
     debugImplementation group: 'androidx.fragment', name: 'fragment-testing', version: '1.2.5'
 }
